--- a/Front Page/Frontpage.css
+++ b/Front Page/Frontpage.css
@@ -102,14 +102,14 @@ body{
   margin-left: 10px;
 }
 .main-grid{
-  position: absolute;
+  margin-left: 200px;
   bottom: 0px;
-  top: 92px;
-  right: 0px;
+  margin-top: 10px;
   left: 209px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   column-gap: 20px;
+  row-gap: 10px;
 }
 .image-box{
   display: flex;
@@ -137,7 +137,7 @@ body{
   align-items: center;
   text-align: center;
 }
-.CPU, .GPU, .RAM, .SSD{
+.cpu, .gpu, .ram, .ssd{
   font-size: 10px;
 }
 .Brand-name, .Price{
