--- a/Front Page/Frontpage.css
+++ b/Front Page/Frontpage.css
@@ -62,15 +62,33 @@ body{
 .sidebar-brand-picker input{
   cursor: pointer;
 }
+.buttons{
+  display: flex;
+  width: 100px;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: 10px;
+}
 .reset-button{
   color: white;
-  background-color: rgb(24, 23, 23);
+  background-color: rgb(0, 0, 0);
   display: inline-block;
   width: 70px;
   border-style: none;
   border-radius: 3px;
   padding: 5px 10px 5px 10px;
-  margin-left: 40px;
+  margin-left: 20px;
+  margin-top: 7px;
+}
+.apply-button{
+  color: white;
+  background-color: rgb(0, 0, 0);
+  display: inline-block;
+  width: 70px;
+  border-style: none;
+  border-radius: 3px;
+  padding: 5px 10px 5px 10px;
+  margin-left: 20px;
   margin-top: 7px;
 }
 .ram-selector-main{
@@ -105,7 +123,7 @@ body{
   margin-left: 200px;
   margin-top: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
   column-gap: 20px;
   row-gap: 10px;
 }
@@ -146,4 +164,34 @@ body{
   border-style: none;
   padding: 10px 10px 10px 10px;
   font-size: 14px;
+  transition: background-color 0.15s;
+}
+.compare-button:hover{
+  background-color: rgb(31, 134, 218);
+  cursor: pointer;
+}
+@media screen and (max-width: 1700px) {
+  .main-grid{
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (max-width: 1560px){
+  .main-grid{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 1060px){
+  .main-grid{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 1060px){
+  .main-grid{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 800px){
+  .main-grid{
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
