--- a/Front Page/Frontpage.css
+++ b/Front Page/Frontpage.css
@@ -104,6 +104,7 @@ body{
   font-size: 14px;
   transition: background-color 0.15s;
   margin-top: 5px;
+  position: relative;
 }
 .compare-button:hover{
   background-color: rgb(31, 134, 218);
@@ -128,4 +129,14 @@ body{
   .main-grid{
     grid-template-columns: repeat(1, 1fr);
   }
+}
+.compare-badge{
+  position: absolute;
+  color: white;
+  background-color: red;
+  border-radius: 100px;
+  padding: 1px 4px;
+  top: 5px;
+  right: 98px;
+  font-size: 10px;
 }
