--- a/Front Page/Frontpage.css
+++ b/Front Page/Frontpage.css
@@ -12,6 +12,7 @@
   right: 0;
   margin: 0px;
   justify-content:space-between;
+  z-index: 100;
 }
 body{
   background-color: rgb(229, 229, 229);
@@ -139,4 +140,11 @@ body{
   top: 5px;
   right: 98px;
   font-size: 10px;
+}
+.reset-compare{
+  position: absolute;
+  right: 25px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+
 }
