--- a/Front Page/Frontpage.css
+++ b/Front Page/Frontpage.css
@@ -1,3 +1,14 @@
+@keyframes fade-in {
+  0%{
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .headermain{
   height: 55px;
   background-color: rgb(41, 73, 86);
@@ -51,6 +62,10 @@ body{
 .sort-by{
   margin-left: 10px;
   margin-right: 20px;
+  transition: all 0.3s;
+}
+.sort-by:hover{
+  transform: scale(1.05);
 }
 .main-grid{
   margin-left: 10px;
@@ -59,6 +74,7 @@ body{
   grid-template-columns: repeat(5, 1fr);
   column-gap: 20px;
   row-gap: 10px;
+  animation: fade-in 1s;
 }
 .image-box{
   display: flex;
@@ -103,13 +119,14 @@ body{
   border-style: none;
   padding: 10px 10px 10px 10px;
   font-size: 14px;
-  transition: background-color 0.15s;
+  transition: all 0.2s;
   margin-top: 5px;
   position: relative;
 }
 .compare-button:hover{
   background-color: rgb(31, 134, 218);
   cursor: pointer;
+  transform: scale(1.2);
 }
 @media screen and (max-width: 1525px) {
   .main-grid{
@@ -146,6 +163,10 @@ body{
   right: 25px;
   padding-top: 2px;
   padding-bottom: 2px;
+  transition: transform 0.2s;
+}
+.reset-compare:hover{
+  transform: scale(1.1);
 }
 .added{
     color: white;
@@ -157,7 +178,10 @@ body{
     transition: background-color 0.15s;
     margin-top: 5px;
     position: relative;
+    transition: all 0.2s;
 }
 .added:hover{
-  background-color: rgb(13, 107, 25);
+  background-color: rgb(17, 124, 32);
+  cursor: pointer;
+  transform: scale(1.2);
 }
