--- a/Front Page/Frontpage.css
+++ b/Front Page/Frontpage.css
@@ -39,6 +39,10 @@ body{
   height: 40px;
   width: 40px;
   margin-left: 10px;
+  transition: all 0.2s;
+}
+.header-image:hover{
+  transform: scale(1.2);
 }
 .buttons{
   display: flex;
